ClientApp/src/app/applications/applications.component.scss
.applications {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.button {
  margin-bottom: 10px;
  width: 100%;
}

.admin-button {
  margin-left: 1rem;
  width: 30%;
  height: 50px;
}

.app-list {
  width: 30%;
}

.current-app {
  width: 50%;
}

td {
  padding: 1rem;
}
tr {
  height: 3rem;
}

@media screen and (max-width: 1360px) {
  .app-list {
    width: 100%;
    margin-bottom: 2rem;
  }

  .current-app {
    width: 100%;
  }
}

